--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: darted_cli
 description: darted_cli is a customizable Dart CLI framework for building command-line tools with hierarchical command structures, argument parsing, and flag management.
-version: 1.0.0
+version: 1.1.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
@@ -9,8 +9,9 @@ environment:
 # Add regular dependencies here.
 dependencies:
   dcli: ^6.1.0
+  enough_ascii_art: ^1.1.0
+  yaml: ^3.1.2
   # path: ^1.8.0
 
 dev_dependencies:
   lints: ^4.0.0
-  # test: ^1.24.0
