--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,4 +15,6 @@ dev_dependencies:
   lints: ^4.0.0
 
 assets:
-  - packages/darted_cli/modules/ascii-art/fonts/
+  - assets/ascii-fonts/cosmic.flf
+  - assets/ascii-fonts/rectangles.flf
+  - assets/ascii-fonts/slant.flf
