--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,6 @@ dev_dependencies:
   lints: ^4.0.0
 
 assets:
-  - packages/darted_cli/assets/cosmic.flf
-  - packages/darted_cli/assets/rectangles.flf
-  - packages/darted_cli/assets/slant.flf
+  - lib/assets/
+  # packages/darted_cli/assets/rectangles.flf
+  # packages/darted_cli/assets/slant.flf
