--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,5 +16,6 @@ dev_dependencies:
 
 assets:
   - lib/assets/
+  - lib/assets/rectangles.flf
   # packages/darted_cli/assets/rectangles.flf
   # packages/darted_cli/assets/slant.flf
