--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: darted_cli
 description: darted_cli is a customizable Dart CLI framework for building command-line tools with hierarchical command structures, argument parsing, and flag management.
-version: 0.1.1+5
-# homepage: https://github.com/micazi/darted_cli
-publish_to: none
+version: 0.1.2
+homepage: https://github.com/micazi/darted_cli
 
 environment:
   sdk: ^3.4.0
@@ -13,10 +12,3 @@ dependencies:
 
 dev_dependencies:
   lints: ^4.0.0
-
-assets:
-  # - lib/assets/
-  # - assets/
-  # - lib/assets/rectangles.flf
-  # packages/darted_cli/assets/rectangles.flf
-  # packages/darted_cli/assets/slant.flf
