--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: darted_cli
 description: darted_cli is a customizable Dart CLI framework for building command-line tools with hierarchical command structures, argument parsing, and flag management.
-version: 0.1.20
+version: 0.1.21
 homepage: https://github.com/micazi/darted_cli
 
 environment:
@@ -9,6 +9,8 @@ environment:
 dependencies:
   enough_ascii_art: ^1.1.0
   yaml: ^3.1.3
+  path: ^1.9.1
 
 dev_dependencies:
   lints: ^5.1.1
+  test: ^1.25.14
